<resources>
    <string name="app_name">Kedai Mbak Tim App</string>

    <string name="email">Email</string>
    <string name="number">Nomor</string>
    <string name="address">Alamat</string>
    <string name="password">Password</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="username">UserID</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Tidak punya akun ?</string>
    <string name="register_now">Daftar disini</string>
    <string name="edit_profile">Ubah Profile</string>

    <string name="name">Nama</string>
    <string name="data_secure">Data kamu akan dilindungi dan tidak akan disebar.</string>
    <string name="register">Register</string>
    <string name="already_have_acc">Sudah punya akun?</string>
    <string name="login_now">Masuk disini</string>
    <string name="form_not_null">Kolom tidak boleh kosong</string>
    <string name="number_not_matches">Masukan nomor telepon yang valid</string>

    <string name="register_success">Register berhasil</string>
    <string name="login_success">Login berhasil</string>

    <string name="add_food_success">Berhasil menambahkan menu makanan</string>
    <string name="update_food_success">Berhasil mengubah menu makanan</string>

    <string name="button_rate_fail">Ulasan dapat dikirim jika status pesanan selesai</string>
    <string name="rating_success">Berhasil memberi ulasan</string>

    <string name="logout">Logout</string>
    <string name="want_to_logout">Apa kamu yakin ingin keluar ?</string>
    <string name="yes">Yes</string>
    <string name="success_logout">Berhasil logout</string>
    <string name="no">No</string>

    <string name="morning">Selamat Pagi,\ </string>
    <string name="day">Selamat Siang,\ </string>
    <string name="evening">Selamat Sore,\ </string>
    <string name="night">Selamat Malam,\ </string>


    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <string name="findbycategory">Temukan berdasarkan kategori</string>
    <string name="price">Harga</string>
    <string name="login_google">Continue with Google</string>
    <string name="other">Atau</string>
    <string name="desc">desc</string>
    <string name="reset_password_success">Email reset sandi berhasil dikirim</string>
    <string name="reset_password">Reset Password</string>
    <string name="information_forgot_password">Silahkan masukan alamat email yang terdaftar. Pesan untuk mengganti password akan dikirim ke email tersebut.</string>
    <string name="hint_email">masukan email disini</string>
    <string name="forgot_password">Lupa Password ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">AdminActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="ubah_informasi">Ubah informasi pada profil anda</string>
    <string name="update">Update</string>
    <string name="ket_login">Masuk untuk melanjutkan</string>
    <string name="ket_register">Daftarkan akun baru</string>
    <string name="loading">loading</string>

    <string name="success_favourite">Berhasil menambahkan favourite</string>
    <string name="fail_favourite">Gagal menambahkan favourite</string>
    <string name="failed_load_data">Gagal menampilkan data</string>
    <string name="the_latest_review">Ulasan Terakhir</string>
    <string name="food_category_empty">Data makanan tidak tersedia</string>
    <string name="my_maps_api_key">AIzaSyCiRPrNyciVo1Omglg-_n5TYdU0DEGS_QI</string>
    <string name="category">Kategori Makanan</string>
    <string name="see">See more</string>
    <string name="semua">Semua</string>
    <string name="nasikotak">Nasi Kotak</string>
    <string name="tumpeng">Tumpeng</string>
    <string name="nasibento">Nasi Bento</string>
    <string name="nasiurap">Nasi Urap</string>
    <string name="food_for_you">Makanan Untukmu</string>
    <string name="please_enter_information">Masukan semua data yang diperlukan</string>
    <string name="sending_location">Lokasi Pengiriman</string>
    <string name="address_not_added">Alamat belum ditambahkan</string>
    <string name="nol">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="choose_order_type">Pilih Jenis Pengiriman</string>
    <string name="date">00-00-0000</string>
    <string name="choose_order_date">Pilih Tanggal Pengiriman</string>
    <string name="choose_order_time">Pilih Jam Pengiriman</string>
    <string name="time">00:00</string>
    <string name="note">catatan tambahan</string>
    <string name="confirm">Konfirmasi</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="success_add_address">Berhasil menambahkan alamat pengguna</string>
    <string name="success_add_data">Berhasil menyimpan data</string>
    <string name="success_delete">Berhasil menghapus makanan</string>
    <string name="authorization_failed">User yang login bukan admin</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>


</resources>